--- a/SistemaHotel/SistemaHotel.vbproj
+++ b/SistemaHotel/SistemaHotel.vbproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="conexao.vb" />
+    <Compile Include="controleLogin.vb" />
     <Compile Include="frm_login.Designer.vb">
       <DependentUpon>frm_login.vb</DependentUpon>
     </Compile>
